objects/ssot__FulfillmentStep__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActualCompletionDateTime__c</fullName>
        <label>Actual Completion Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ActualStartDateTime__c</fullName>
        <label>Actual Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__AssignedToId__c</fullName>
        <label>Assigned To</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssignedToObject__c</fullName>
        <label>Assigned To Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfillmentPlanId__c</fullName>
        <label>Fulfillment Plan</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Fulfillment Step Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__JeopardyIntervalNumber__c</fullName>
        <label>Jeopardy Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__JeopardyIntervalUnit__c</fullName>
        <label>Jeopardy Interval Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__JeopardyStatus__c</fullName>
        <label>Jeopardy Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PlannedCompletionDateTime__c</fullName>
        <label>Planned Completion Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PlannedStartDateTime__c</fullName>
        <label>Planned Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedCompletionDateTime__c</fullName>
        <label>Requested Completion Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedStartDateTime__c</fullName>
        <label>Requested Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RetryCount__c</fullName>
        <label>Retry Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__State__c</fullName>
        <label>State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StepType__c</fullName>
        <label>Step Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UsageType__c</fullName>
        <label>Usage Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718545867822_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FulfillmentStep_AssignedToId_map_Use_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>FulfillmentStep_AssignedToId_map_Use_rel</relationshipLabel>
        <relationshipName>rel_1718545867822_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718546700057_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FulfillmentStep_FulfillmentPlanId_ma_rel</label>
        <referenceTo>ssot__FulfillmentPlan__dlm</referenceTo>
        <relationshipLabel>FulfillmentStep_FulfillmentPlanId_ma_rel</relationshipLabel>
        <relationshipName>rel_1718546700057_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>